--- a/GfStudio/wwwroot/index.html
+++ b/GfStudio/wwwroot/index.html
@@ -30,6 +30,7 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/fileUtils.js"></script>
 </body>
 
 </html>
